--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
+ytmusicapi >= 0.22.0
+rich >= 10.12.0
+rich_click >= 1.3.0
 requests ~= 2.27.1
 requests_toolbelt ~= 0.9.1
 spotipy ~= 2.19.0
-youtube_search_python >= 1.6.2
-python-dotenv >= 0.19.2
-rich >= 10.12.0
-rich_click >= 1.3.0
+python-dotenv ~= 0.19.2
