--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,43 @@
-[tool.black]
-line-length = 121
-target-version = ["py37"]
+[tool.poetry]
+name = "spotify-to-musi"
+description = "Transfer Spotify playlists to Musi."
+version = "1.0.0"
+readme = "README.md"
+license = "MIT"
+authors = ["Hexiro <mail@hexiro.me>"]
+repository = "https://github.com/hexiro/spotify-to-musi"
+keywords = ["spotify", "music", "musi", "transfer", "cli"]
+classifiers = [
+    "Natural Language :: English",
+    "Environment :: Console",
+    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: Implementation :: CPython",
+    "Topic :: Software Development",
+    "Topic :: Software Development :: Libraries ",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+]
+
+[tool.poetry.dependencies]
+python = "^3.7"
+ytmusicapi = "^0.22.0"
+rich = "^12.5.1"
+rich-click = "^1.5.1"
+requests = "^2.28.1"
+requests-toolbelt = "^0.9.1"
+spotipy = "^2.20.0"
+
+[tool.poetry.scripts]
+spotify-to-musi = "spotify_to_musi.__main__:cli"
+
+[tool.poetry.urls]
+"Bug Tracker" = "https://github.com/hexiro/spotify-to-musi/issues"
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
