--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,9 @@ spotify-to-musi = "spotify_to_musi.__main__:cli"
 [tool.poetry.urls]
 "Bug Tracker" = "https://github.com/hexiro/spotify-to-musi/issues"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.0"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
