--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ classifiers = [
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: Implementation :: CPython",
     "Topic :: Software Development",
     "Topic :: Software Development :: Libraries ",
@@ -24,13 +25,16 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.7"
-ytmusicapi = "^0.22.0"
+python = "^3.8"
 rich = "^12.5.1"
 rich-click = "^1.5.1"
-requests = "^2.28.1"
-requests-toolbelt = "^0.9.1"
-spotipy = "^2.20.0"
+aiofiles = "^23.1.0"
+httpx = "^0.24.0"
+pydantic = "^1.10.7"
+pyfy = "^2.2.0"
+sanic = "^23.3.0"
+python-dotenv = "^1.0.0"
+async-cache = "^1.1.1"
 
 [tool.poetry.scripts]
 spotify-to-musi = "spotify_to_musi.__main__:cli"
@@ -40,6 +44,7 @@ spotify-to-musi = "spotify_to_musi.__main__:cli"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
+pytest-asyncio = "^0.21.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
