--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,13 @@ spotify-to-musi = "spotify_to_musi.__main__:cli"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
 pytest-asyncio = "^0.21.0"
+mypy = "^1.2.0"
+ruff = "^0.0.261"
+black = "^23.3.0"
+isort = "^5.12.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+
