--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,4 +54,9 @@ isort = "^5.12.0"
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.black]
+line-length = 88
+target-version = ["py38"]
 
+[tool.ruff]
+ignore = ["E501"]  # let black handle line length
