--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,8 +59,13 @@ line-length = 88
 target-version = ["py38"]
 
 [tool.ruff]
+select = ["ANN", "TCH", "N", "S", "B", "A", "C4", "EM"]
 ignore = [
-    "E501",  # let black handle line length
-    "ANN401"  # if everything is going to be typed, some things have to be any
+    "E501",    # let black handle line length
+    "ANN401",  # if everything is going to be typed, some things have to be any
+    "A003",    # attributes with the same name as builtins is okay
+    "EM101",   # I personally think it's okay to use a string literal in this case.
 ]  
-select = ["ANN", "TCH", "N"]
+
+[tool.ruff.per-file-ignores]
+"tests/*.py" = ["S101"]
