fix mypy issues

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ mypy = "^1.2.0"
 ruff = "^0.0.261"
 black = "^23.3.0"
 isort = "^5.12.0"
+types-aiofiles = "^23.1.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -69,3 +70,6 @@ ignore = [
 
 [tool.ruff.per-file-ignores]
 "tests/*.py" = ["S101"]
+
+[tool.mypy]
+ignore_missing_imports = true
