--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,7 +68,7 @@ ignore = [
 ]  
 
 [tool.ruff.per-file-ignores]
-"tests/*.py" = ["S101"]
+"tests/*.py" = ["S101"]   # allow using assert in tests
 
 [tool.mypy]
 ignore_missing_imports = true
