--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ pydantic = "^1.10.7"
 pyfy = "^2.2.0"
 sanic = "^23.3.0"
 async-cache = "^1.1.1"
+typing-extensions = {version = "^4.5.0", python = "<3.11"}
 
 [tool.poetry.scripts]
 spotify-to-musi = "spotify_to_musi.__main__:cli"
