--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -9,7 +9,7 @@ jobs:
       fail-fast: false
       matrix:
         # setting just 3.10 bugs out for some reason
-        python-version: [3.8, 3.9, 3.10.11, 3.11.3]
+        python-version: [3.9, 3.10.11, 3.11.3]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
