--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "spotify-to-musi"
 description = "Transfer Spotify playlists to Musi."
-version = "2.0.0rc3"
+version = "2.0.0rc4"
 readme = "README.md"
 license = "MIT"
 authors = ["Hexiro <mail@hexiro.me>"]
@@ -34,6 +34,7 @@ pyfy = "^2.2.0"
 sanic = "^23.3.0"
 async-cache = "^1.1.1"
 typing-extensions = {version = "^4.5.0", python = "<3.11"}
+uvloop = {version = "^0.17.0", platform = "linux"}
 
 [tool.poetry.scripts]
 spotify-to-musi = "spotify_to_musi.__main__:cli"
