--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ sanic = "^23.3.0"
 async-cache = "^1.1.1"
 typing-extensions = {version = "^4.5.0", python = "<3.11"}
 uvloop = {version = "^0.17.0", platform = "linux"}
+aiohttp = "^3.8.4"
 
 [tool.poetry.scripts]
 spotify-to-musi = "spotify_to_musi.__main__:cli"
