--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "spotify-to-musi"
 description = "Transfer Spotify playlists to Musi."
-version = "2.0.1rc1"
+version = "2.0.1rc7"
 readme = "README.md"
 license = "MIT"
 authors = ["Hexiro <mail@hexiro.me>"]
@@ -24,11 +24,11 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.9"
-rich = "^13.4.2"
+rich = ">=12.6.0 <15.0.0"
 rich-click = "^1.6.1"
 aiofiles = "^23.1.0"
-httpx = "^0.24.1"
-pydantic = "^2.0.2"
+httpx = ">=0.23.0 <=0.25.0"
+pydantic = "^1.10.7"
 pyfy = "^2.2.0"
 sanic = "^23.3.0"
 async-cache = "^1.1.1"
